# mcp-server-saxo-openapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SPEC_FRESHNESS.md  VALIDATION.md  pyproject.toml
docs/: MAINTAINER.md
spec/json/atr/: cashmanagement-cashwithdrawallimits.json  partner-cashtransfer.json  partner-cashtransferlimits.json  partner-prefunding.json  securitiestransfers.json
spec/json/ca/: eventviews.json  standinginstructions.json
spec/json/cm/: documents.json  signups.json
spec/json/cr/: historicalreportdata-tradedetails.json
spec/json/cs/: clientinfo.json  tradingconditions-contractoption.json
spec/json/hist/: transactions.json  unsettledamounts.json
spec/json/port/: accountgroups.json  balances.json  clients.json  closedpositions.json  exposure.json  orders.json  users.json
spec/json/ref/: currencies.json  currencypairs.json
spec/json/reg/: investmentprofile.json
spec/json/trade/: allocationkeys.json  messages.json  trades.json
src/mcp_server_saxo_openapi/: __init__.py  cli.py  commands.py  index.py  pitfalls.py  server.py  spec_loader.py
src/mcp_server_saxo_openapi/data/: saxo_openapi.json
src/mcp_server_saxo_openapi/data/json/atr/: cashmanagement-periodicpayment.json
src/mcp_server_saxo_openapi/data/json/ca/: elections.json  holdings.json
src/mcp_server_saxo_openapi/data/json/cm/: clientrenewals.json
src/mcp_server_saxo_openapi/data/json/cs/: cashmanagement-wiretransfers.json  historicalreportdata-aggregatedamounts.json  historicalreportdata-closedpositions.json
src/mcp_server_saxo_openapi/data/json/ens/: clientactivities.json
src/mcp_server_saxo_openapi/data/json/hist/: historicalpositions.json
src/mcp_server_saxo_openapi/data/json/mkt/: instrumentdocument.json
src/mcp_server_saxo_openapi/data/json/partnerintegration/: advisoryaccounts.json  externalaccounts.json  interactiveesigning.json  interactiveidverification.json  partnerbulkbookings.json  updatepricing.json
src/mcp_server_saxo_openapi/data/json/port/: accountgroups.json  accounts.json  balances.json  clients.json  closedpositions.json  exposure.json  netpositions.json  positions.json  users.json
src/mcp_server_saxo_openapi/data/json/ref/: countries.json  languages.json
src/mcp_server_saxo_openapi/data/json/trade/: orders.json  positions.json  prices.json
src/saxo_doc_helper/: __init__.py  __main__.py  cli.py  commands.py  index.py  mcp_server.py
src/saxo_doc_helper/data/: __init__.py
src/saxo_doc_helper/data/json/atr/: cashmanagement-beneficiaryinstructions.json  cashmanagement-cashwithdrawal.json  cashmanagement-interaccounttransfers.json
src/saxo_doc_helper/data/json/ca/: events.json  proxyvoting.json
src/saxo_doc_helper/data/json/chart/: charts.json
src/saxo_doc_helper/data/json/cm/: accounts.json  users.json
src/saxo_doc_helper/data/json/cr/: historicalreportdata-accountstatement.json  historicalreportdata-portfoliomanagement.json  historicalreportdata-tradesexecuted.json
src/saxo_doc_helper/data/json/cs/: audit-orderactivities.json  cashmanagement-interaccounttransfer.json  historicalreportdata-bookings.json  historicalreportdata-trades.json  support-cases.json  tradingconditions-cost.json  tradingconditions.json
src/saxo_doc_helper/data/json/dm/: disclaimermanagement.json
src/saxo_doc_helper/data/json/hist/: accountvalues.json  performance.json
src/saxo_doc_helper/data/json/partnerintegration/: fundinginstruction.json
src/saxo_doc_helper/data/json/port/: accounts.json  netpositions.json  positions.json
src/saxo_doc_helper/data/json/ref/: algostrategies.json  cultures.json  exchanges.json  instruments.json  standarddates.json  timezones.json
src/saxo_doc_helper/data/json/reg/: financialoverview.json  knowledgeandexperience.json
src/saxo_doc_helper/data/json/trade/: infoprices.json  optionschain.json
src/saxo_doc_helper/data/json/vas/: pricealerts.json
tests/: test_saxo_doc_helper.py  test_server.py
tools/: saxo_doc_helper.py  test_saxo_doc_helper.py
