[project]
name = "mcp-server-saxo-openapi"
version = "0.1.1"
description = "MCP server and CLI for Saxo Bank OpenAPI spec lookup (offline; no trading)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "nohikomiso" },
]
keywords = [
  "mcp",
  "model-context-protocol",
  "saxo",
  "saxo-bank",
  "saxobank",
  "openapi",
  "cli",
  "trading",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nohikomiso/mcp-server-saxo-openapi"
Repository = "https://github.com/nohikomiso/mcp-server-saxo-openapi"
Issues = "https://github.com/nohikomiso/mcp-server-saxo-openapi/issues"

[project.scripts]
saxo-doc-helper = "saxo_doc_helper.cli:main"
mcp-server-saxo-openapi = "saxo_doc_helper.cli:mcp_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saxo_doc_helper"]

[tool.hatch.build.targets.sdist]
include = [
  "src/saxo_doc_helper",
  "spec/json",
  "tests",
  "tools",
  "README.md",
  "README.ja.md",
  "SPEC_FRESHNESS.md",
  "LICENSE",
  "CONTRIBUTING.md",
]
