[project]
name = "mcp-server-saxo-openapi"
version = "0.3.1"
description = "MCP server for Saxo Bank OpenAPI spec lookup with pitfalls guide (offline; no trading)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "nohikomiso" },
]
keywords = [
  "mcp",
  "model-context-protocol",
  "saxo",
  "saxo-bank",
  "saxobank",
  "openapi",
  "trading",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.28.1",
  "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/nohikomiso/mcp-server-saxo-openapi"
Repository = "https://github.com/nohikomiso/mcp-server-saxo-openapi"
Issues = "https://github.com/nohikomiso/mcp-server-saxo-openapi/issues"
Changelog = "https://github.com/nohikomiso/mcp-server-saxo-openapi/blob/main/CHANGELOG.md"

[project.scripts]
mcp-server-saxo-openapi = "mcp_server_saxo_openapi.server:main"
saxo-doc-helper = "mcp_server_saxo_openapi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_saxo_openapi"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mcp_server_saxo_openapi",
  "README.md",
  "README.ja.md",
  "CHANGELOG.md",
  "SPEC_FRESHNESS.md",
  "LICENSE",
]
